converted index.php to index.html and added sponsor link

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<?
+<?php
 // require common code
 //require_once("includes/common.php"); 
 
@@ -32,7 +32,7 @@ $id = $_SESSION["id"];
 	<iframe width="550" height="315" src="http://www.youtube.com/embed/mDLDJMJi05c" frameborder="0" allowfullscreen></iframe>
 	
 	<h2><b>Eastbound 2014 Videos!!!</b> | April 21, 2014 </h2><br>
-	<iframe width="560" height="315" src="//www.youtube.com/embed/tXZLF_xqvaQ?list=PLadDdfXlfSo3Pk2nKGXJvk50RnXATlwIn" frameborder="0" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLadDdfXlfSo3Pk2nKGXJvk50RnXATlwIn" frameborder="0" allowfullscreen></iframe>
 
 	<h2><b>Join AADT This Fall!</b> | June 9, 2013</h2><br><br>
 	<iframe width="550" height="315" src="http://www.youtube.com/embed/KWXHEK3pIuE" frameborder="0" allowfullscreen></iframe>
@@ -48,20 +48,24 @@ $id = $_SESSION["id"];
 	</p>
 	<p>*Although the video above says Dear Class of 2017, we welcome undergraduate and graduate students from all class years to join our troupe as new members!</p>
 
-	<? 
-		$news = mysql_query("SELECT * FROM `news` WHERE type = 'Home' ORDER by date DESC LIMIT 1");
-		while($newsrow= mysql_fetch_array($news))
-		{
-			print('<h2><b>' . $newsrow["title"] . "</b> | " . date("F d, Y",$newsrow["date"]) . '</h2>');
-			print('<p>' . $newsrow["text"] . '</p>');
-			print('<br>');			
-		}
-	?>
+<!-- <? 
+	// 	$news = mysql_query("SELECT * FROM `news` WHERE type = 'Home' ORDER by date DESC LIMIT 1");
+	// 	while($newsrow= mysql_fetch_array($news))
+	// 	{
+	// 		print('<h2><b>' . $newsrow["title"] . "</b> | " . date("F d, Y",$newsrow["date"]) . '</h2>');
+	// 		print('<p>' . $newsrow["text"] . '</p>');
+	// 		print('<br>');			
+	// 	}
+	// ?>
+-->
+			<h4>Solar Energy for Homes</h4>
+			<p>Dance troupes are often looking for ways to save on long-term expenses. One way that many residential and commercial buildings are saving money is through the use of solar panels. Even if you don't own solar, you can still <a href="http://www.buysolarenergysystem.com">buy solar energy</a> from distributors in the market.</p>
+
 			<h4>Organic Mattresses for Dancers</h4>
 			<p>After a long day in the dance studio it can be nice to come back to your house to relax and unwind. Make sure your lounging area is comfortable with an <a href="http://www.lifekind.com">organic mattress</a> and down comforter. Getting a good night's rest is a good way to be prepared for the next day's tasks.</p>
 			</div>
 			    		
 		</div>
-    	<? include("footer.php"); ?>
+    	<?php include("footer.php"); ?>
     </body>
 </html>
