add back nav bar

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <?php
 // require common code
-//require_once("includes/common.php"); 
+require_once("includes/common.php"); 
 
 $id = $_SESSION["id"];
 
-
 ?>
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -15,7 +15,7 @@ $id = $_SESSION["id"];
     </head>
     <body id="index">
     	<div id="wrapper">
-			<? include("nav.php"); ?>
+			<?php include("nav.php"); ?>
     		<div class="center" id="transparent">
     		</div>
     		<div class="center">
